# iSincNet

./: .gitignore  LICENSE  MANIFEST.in  README.md  dataset_sanity_check.ipynb  demo.ipynb  model.py  package_training.sh  pyproject.toml  requirements.txt
datasets/: compiler.py  configs.py  dataset.py  generate_dataset.ipynb  generate_hdf5.py
datasets/utils/: hdf5writer.py  waveform.py
notebooks/: loudness.ipynb  transfer.txt
pretrained/: 16000_128_127_real_lin_causal.ckpt  16000_128_127_real_lin_ncausal.ckpt  16000_128_127_real_mel_causal.ckpt  16000_128_127_real_mel_ncausal.ckpt  16000_128_128_real_lin_causal.ckpt  16000_128_128_real_mel_causal.ckpt  16000_128_64_real_mel_causal.ckpt  16000fs_128fps_128bins_complex_causal.ckpt  16000fs_128fps_128bins_complex_ncausal.ckpt  16000fs_128fps_128bins_lin_complex_ncausal.ckpt  16000fs_128fps_128bins_lin_real_causal.ckpt  16000fs_128fps_128bins_mel_complex_ncausal.ckpt  16000fs_128fps_128bins_mel_real_causal.ckpt  16000fs_128fps_128bins_real_causal.ckpt  16000fs_128fps_256bins_mel_complex_ncausal.ckpt  44100fs_350fps_128bins_lin_complex_ncausal.ckpt  44100fs_350fps_128bins_lin_real_causal.ckpt  44100fs_350fps_128bins_mel_complex_ncausal.ckpt  44100fs_350fps_256bins_mel_complex_ncausal.ckpt  44100fs_350fps_256bins_mel_real_causal.ckpt
sincnet/: __init__.py  model.py
training/: train.py  trainer.py
training/utils/: audio_augmentations.py  general.py  stft.py
