[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iSincNet"
version = "0.1.0"
authors = [{ name = "Williams Zanga", email = "Williams.zanga@gmail.com" }]
description = "Fast Lightweight inverstible SincNet"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://gitlab.com/sonustech/sincnet.git"